# Sona-PYTHON

src/: 2deco.py  ConditionalStmt1.py  Datatype.py  EqualChecking.py  Exception.py  FileHandling.py  Inheritance.py  List.py  Loop.py  Tuple.py  TypeCasting.py  TypesOfVariable.py  Variable.py  abstractions.py  calc.py  deco_eg3.py  decorator.py  decorator_eg2.py  file1.txt  file2.txt  filehandling1.py  fix.py  for_else.py  generator.py  hof.py  inner.py  lambda.py  library_api.py  listpractice1.py  listpractice2.py  log.py  loggings.py  operator.py  rest_api.py  reverselist.py  test_calcu.py  test_fix.py
src/Problems/: FrequencyOfElement.py  UniqueElement.py  armstrong.py  countdown.py  factorial.py  factors.py  fibonacci.py  largest_num.py  multiplication.py  palindrome.py  prime.py  prime_in_range.py  print_1_n.py  product_of_digits.py  reverseList.py  reverse_num.py  reverse_string.py  secondlargest.py  secsmall.py  sum_of_even_odd_num.py
src/ProjectCalc/: pyproject.toml
src/ProjectCalc/src/Calculator/: __init__.py
src/ProjectCalc/src/calculatorlib.egg-info/: PKG-INFO  SOURCES.txt
src/TestProject/: main.py
src/VirtualEnv/: requirements.txt
