[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calculatorlib"
version = "1.0.0"
description = "A simple calculator library"
requires-python = ">=3.10"

authors = [
    {name = "Sona", email = "sona@example.com"}
]

readme = "README.md"

dependencies = []